quorum/test/tests/other/Fail/ConstantObjectsReassign.quorum
/*
Expected output: should not compile
*/

use Libraries.System.File
use Libraries.Compute.Random
use Libraries.Compute.Math

class Main
    constant File file
    constant Math m
    
    action Main
        File file2
        file = file2
        m = undefined
        constant Random r
        Random r2
        r = r2
    end
end